🚀 Major Application Update: Complete Intrusion Detection System
✨ NEW FEATURES:
- Complete ML pipeline with preprocessing, training, and evaluation
- FastAPI backend with authentication and decision endpoints
- Gradio UI with login/register functionality
- Supabase integration with user management and RLS policies
- Redis caching for improved performance
- Comprehensive test suite (unit tests, integration tests)
- Docker containerization for production deployment
- Model distribution system (MLflow + local fallback)

🔧 INFRASTRUCTURE:
- Production-ready Docker Compose configuration
- Automated startup/shutdown scripts
- CI/CD pipeline setup
- Database migrations and schema management
- Environment configuration management

📚 DOCUMENTATION:
- Complete deployment guide for end users
- API documentation and implementation plans
- Model distribution solution guide
- Testing documentation and coverage reports
- Architecture and design documents

🛡️ SECURITY:
- JWT-based authentication
- Row-level security policies
- User role management (admin/user)
- Secure model distribution
- Environment variable management

📊 ML CAPABILITIES:
- Logistic Regression model for traffic classification
- Feature preprocessing pipeline
- Model versioning and tracking
- Sample model for testing
- Export/import functionality

🎯 READY FOR:
- Development and testing
- Production deployment
- End-user distribution
- CI/CD integration

Total: 100+ new files, 5000+ lines of code

--- a/.gitignore
+++ b/.gitignore
@@ -21,8 +21,10 @@ wheels/
 *.egg
 
 # Virtual Environment
-venv/
+.env
+.venv
 env/
+venv/
 ENV/
 
 # IDE
@@ -30,12 +32,50 @@ ENV/
 .vscode/
 *.swp
 *.swo
+.DS_Store
+
+# Testing
+.coverage
+htmlcov/
+.pytest_cache/
+.hypothesis/
+
+# MLflow
+mlruns/
+mlflow.db
+
+# Docker
+.docker/
 
 # Logs
 *.log
+logs/
+
+# Database
+*.sqlite3
+*.db
+
+# Cache
+.cache/
+.mypy_cache/
+.ruff_cache/
+
+# Jupyter Notebook
+.ipynb_checkpoints
+
+# Data
+data/raw/*
+data/processed/*
+!data/raw/.gitkeep
+!data/processed/.gitkeep
+
+# Model artifacts
+model_artifacts/
+
+# OS
+Thumbs.db
 
 # Local development settings
-.env
 .env.local
 
 # Distribution / packaging
