--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,23 +1,41 @@
 version: '3.8'
 
 services:
-  app:
+  api:
     build: .
     ports:
-      - "8000:8000"  # FastAPI
-      - "7860:7860"  # Gradio
+      - "8000:8000"
     volumes:
       - .:/app
-      - ./model_artifacts:/app/model_artifacts
-      - ./mlruns:/app/mlruns
     environment:
+      - APP_ENV=development
+      - DEBUG=true
+      - MLFLOW_TRACKING_URI=http://mlflow:5000
+      - REDIS_URL=redis://redis:6379
       - DATABASE_URL=postgresql://postgres:postgres@db:5432/intrusion_detector
-      - MLFLOW_TRACKING_URI=file:/app/mlruns
     depends_on:
+      - mlflow
+      - redis
       - db
 
+  mlflow:
+    image: ghcr.io/mlflow/mlflow:latest
+    ports:
+      - "5000:5000"
+    volumes:
+      - ./mlruns:/mlruns
+      - ./mlflow.db:/mlflow.db
+    command: mlflow server --host 0.0.0.0 --port 5000 --backend-store-uri sqlite:///mlflow.db --default-artifact-root /mlruns
+
+  redis:
+    image: redis:latest
+    ports:
+      - "6379:6379"
+    volumes:
+      - redis_data:/data
+
   db:
-    image: postgres:13
+    image: postgres:15
     ports:
       - "5432:5432"
     environment:
@@ -28,4 +46,5 @@ services:
       - postgres_data:/var/lib/postgresql/data
 
 volumes:
+  redis_data:
   postgres_data: 
