--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,42 +1,70 @@
-[tool.poetry]
+[build-system]
+requires = ["hatchling"]
+build-backend = "hatchling.build"
+
+[project]
 name = "intrusion-detector"
 version = "0.1.0"
-description = "A web application for classifying network traffic as malicious or normal using ML"
-authors = ["Your Name <your.email@example.com>"]
+description = "Machine learning-based intrusion detection system"
 readme = "README.md"
+requires-python = ">=3.12"
+license = "MIT"
+authors = [
+    { name = "Your Name", email = "your.email@example.com" }
+]
+dependencies = [
+    "fastapi>=0.109.0",
+    "uvicorn>=0.27.0",
+    "pydantic>=2.4.2",
+    "python-dotenv>=1.0.0",
+    "supabase>=2.3.0",
+    "mlflow>=2.10.0",
+    "scikit-learn>=1.4.0",
+    "pandas>=2.2.0",
+    "numpy>=1.26.0",
+    "httpx>=0.26.0",
+    "python-jose[cryptography]>=3.3.0",
+    "passlib[bcrypt]>=1.7.4",
+    "python-multipart>=0.0.6",
+    "structlog>=25.3.0",
+    "redis>=4.2.0,<5.0.0",
+    "fastapi-cache2>=0.2.1",
+    "fastapi-cache2[redis]>=0.2.1",
+    "xgboost>=2.0.0",
+    "psycopg2-binary>=2.9.9"
+]
 
-[tool.poetry.dependencies]
-python = "^3.9"
-fastapi = "^0.104.1"
-uvicorn = "^0.24.0"
-pydantic = "^2.4.2"
-gradio = "^3.50.2"
-scikit-learn = "^1.3.0"
-pandas = "^2.1.0"
-numpy = "^1.24.3"
-psycopg2-binary = "^2.9.9"
-python-dotenv = "^1.0.0"
-mlflow = "^2.8.1"
-python-jose = "^3.3.0"
-passlib = "^1.7.4"
-python-multipart = "^0.0.6"
-
-[tool.poetry.group.dev.dependencies]
-pytest = "^7.4.2"
-black = "^23.7.0"
-flake8 = "^6.1.0"
-mypy = "^1.6.1"
-isort = "^5.12.0"
-
-[build-system]
-requires = ["poetry-core"]
-build-backend = "poetry.core.masonry.api"
+[project.optional-dependencies]
+dev = [
+    "pytest>=7.4.3",
+    "pytest-cov>=4.1.0",
+    "black>=23.11.0",
+    "isort>=5.12.0",
+    "flake8>=6.1.0",
+    "mypy>=1.7.1",
+]
 
 [tool.black]
 line-length = 88
-target-version = ['py39']
+target-version = ["py312"]
 include = '\.pyi?$'
 
 [tool.isort]
 profile = "black"
-multi_line_output = 3 
+multi_line_output = 3
+line_length = 88
+
+[tool.mypy]
+python_version = "3.12"
+warn_return_any = true
+warn_unused_configs = true
+disallow_untyped_defs = true
+disallow_incomplete_defs = true
+
+[tool.pytest.ini_options]
+testpaths = ["tests"]
+python_files = ["test_*.py"]
+addopts = "-v --cov=src --cov-report=term-missing"
+
+[tool.hatch.build.targets.wheel]
+packages = ["src"] 
