--- a/requirements.txt
+++ b/requirements.txt
@@ -156,6 +156,7 @@ pyasn1_modules==0.4.2
 pycparser==2.22
 pydantic>=2.0.0
 pydantic_core==2.33.1
+pydantic-settings>=2.0.0
 Pygments==2.19.1
 PyJWT==2.10.1
 PyNaCl==1.5.0
@@ -223,3 +224,4 @@ fastapi-cache2>=0.2.1
 fastapi-cache2[redis]>=0.2.1
 xgboost>=2.0.0
 psycopg2-binary
+gradio>=4.0.0
