--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ dependencies = [
     "fastapi>=0.109.0",
     "uvicorn>=0.27.0",
     "pydantic>=2.4.2",
+    "pydantic[email]>=2.4.2",
     "pydantic-settings>=2.0.0",
     "python-dotenv>=1.0.0",
     "supabase>=2.3.0",
